manifests/vault/statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  labels:
    app: vault
spec:
  serviceName: vault
  updateStrategy:
    type: OnDelete
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsGroup: 1000
        runAsUser: 100
        fsGroup: 1000
      containers:
        - name: vault
          image: hashicorp/vault:1.16.1
          ports:
            - containerPort: 8200
              name: vault-api
            - containerPort: 8201
              name: http-internal
          securityContext:
            allowPrivilegeEscalation: false
          args:
            - server
          volumeMounts:
            - name: config
              mountPath: /vault/config
            - name: data
              mountPath: /vault/data
      volumes:
        - name: config
          configMap:
            name: vault-config
        - name: data
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: managed
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
